--- a/frontend/src/app/fruit/fruit-list/fruit-list.component.html
+++ b/frontend/src/app/fruit/fruit-list/fruit-list.component.html
@@ -1,11 +1,5 @@
-<div class="fruitopia-bg">
+<div class="fruit-list-wrapper">
 	<div class="fruit-list-container">
-		<h2 class="fruitopia-title">
-			<span class="fruit-emoji">🍇🍎🍍🍓</span>
-			Fruitopia - Healthy Fruits
-			<span class="fruit-emoji">🍉🥝🍊🍒</span>
-		</h2>
-
 		<div class="fruit-list-grid">
 			<mat-card *ngFor="let fruit of fruits" class="fruit-card glass-card" tabindex="0">
 				<mat-card-header>
