--- a/frontend/src/app/recommend/recommend.component.html
+++ b/frontend/src/app/recommend/recommend.component.html
@@ -54,6 +54,12 @@
           <mat-form-field appearance="outline" class="premium-input">
             <mat-label>Select a condition</mat-label>
             <mat-select [(ngModel)]="disease">
+              <mat-select-trigger>
+                <div class="selected-content" *ngIf="disease">
+                  <mat-icon class="selected-icon">{{getDiseaseIcon(disease)}}</mat-icon>
+                  <span>{{ disease | titlecase }}</span>
+                </div>
+              </mat-select-trigger>
               <mat-option *ngFor="let d of diseases" [value]="d">
                 <div class="option-content">
                   <mat-icon class="option-icon">{{getDiseaseIcon(d)}}</mat-icon>
